Moved questionnaire R code to chunks file

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ qualtrics.yml
 data-raw/*.rds
 *.sqlite
 
+# knitr files
+*_cache/
+*_files/
+
+# github publishing
+!*_files/
+
+# r+rstudio
 .Rproj.user
 .Rhistory
 .RData
