--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # contains secrets
+.environment
 qualtrics.yml
 
-# reproducible
-data-raw/*.rds
-
 # data
+data-raw/*.rds
+data-raw/*.csv
+data-raw/stack-overflow-developer-survey-2017*
 *.sqlite
-data-raw/stack-overflow*
 
 # knitr files
 *.html
