Put in some Neo4j figs just in case the demo doesn't work

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,14 @@ data-raw/stack-overflow-developer-survey-2017*
 *.sqlite
 
 # knitr files
+*.pdf
 *.html
 *_cache/
 *_files/
+
+# tex
+*.nav
+*.snm
 
 # github publishing
 !*_files/figure-gfm/
