--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ data/*.rda
 # knitr files
 *.pdf
 *.html
-*_cache/
-*_files/*
+**/*_cache/
+**/*_files/*
 
 # github publishing
 !*_files/figure-markdown_strict/
